# supersearch

./: .gitignore  LICENSE  README.md  index.html  middleware.md  nextConfig.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  testFile.txt  todo.md  tsconfig.json  webpack.config.js
.next/: BUILD_ID  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
.next/cache/: .tsbuildinfo
.next/server/: middleware-build-manifest.js  pages-manifest.json  webpack-api-runtime.js
.next/server/pages/: 404.html  500.html  _app.js  _document.js  _error.js  index.html  index.js
.next/server/vendor-chunks/: @swc.js  next.js
.next/static/QnWapmJQFtfZ7Vop1p-N2/: _buildManifest.js
backend/: openFile.scpt  server.js
backend/controllers/: controllerTest.js
backend/python_history/: get_chrome_history.py
backend/routes/: routeTest.js
filesys/: Cargo.toml
filesys/src/: main.rs
frontend/: .gitignore  next.config.mjs  package-lock.json  package.json
frontend/.next/: trace
frontend/main/: main.js  preload.js
indexer/: Cargo.toml  index.d.ts  index.js  package.json
indexer/.github/workflows/: CI.yml
indexer/npm/darwin-x64/: README.md  package.json
indexer/npm/linux-x64-gnu/: README.md  package.json
indexer/npm/win32-x64-msvc/: README.md  package.json
indexer/src/: lib.rs
main/: main.js  main.mjs  preload.js
src/components/: SearchResultItem.tsx  SearchResults.tsx  SpotlightSearch.tsx
src/pages/: _app.tsx  _document.tsx  index.tsx
src/styles/: globals.css
(+66 files in other folders)
