[package]
edition = "2021"
name = "indexer"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
walkdir = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5.4"
bincode = "1.3.3"
rayon = "1.5.1"
time = "0.3.7"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
